--- a/Desktop/Projects/my-simple-website/index.html
+++ b/Desktop/Projects/my-simple-website/index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style/blog.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Simple Website</title>
+   
 </head>
 <body>
-    
 </body>
+<div>
+    <h3>
+        My First blog
+    </h3>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas explicabo esse doloremque expedita temporibus dignissimos fuga. Esse, laborum adipisci eius quaerat ipsa sint facilis aut repellat pariatur nesciunt cupiditate enim!</p>
+</div>
+<div>
+    <h3>
+        My second blog
+    </h3>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas explicabo esse doloremque expedita temporibus dignissimos fuga. Esse, laborum adipisci eius quaerat ipsa sint facilis aut repellat pariatur nesciunt cupiditate enim!</p>
+</div>
+<div>
+    <h3>
+        My third blog
+    </h3>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas explicabo esse doloremque expedita temporibus dignissimos fuga. Esse, laborum adipisci eius quaerat ipsa sint facilis aut repellat pariatur nesciunt cupiditate enim!</p>
+</div>
 </html>
