my apdete coding

--- a/Desktop/Projects/my-simple-website/index.html
+++ b/Desktop/Projects/my-simple-website/index.html
@@ -27,4 +27,11 @@
     </h3>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas explicabo esse doloremque expedita temporibus dignissimos fuga. Esse, laborum adipisci eius quaerat ipsa sint facilis aut repellat pariatur nesciunt cupiditate enim!</p>
 </div>
+<div>
+    <div><h3>you to push incremental code</h3>
+<ul><li>git add .</li></ul>
+<ul><li>git commit -m"add a meaningfulo commit message" </li></ul>
+<ul><li>git push</li></ul>
+</div>
+
 </html>
