--- a/Desktop/Projects/my-simple-website/index.html
+++ b/Desktop/Projects/my-simple-website/index.html
@@ -27,6 +27,7 @@
     </h3>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas explicabo esse doloremque expedita temporibus dignissimos fuga. Esse, laborum adipisci eius quaerat ipsa sint facilis aut repellat pariatur nesciunt cupiditate enim!</p>
 </div>
+
 <div>
     <div><h3>you to push incremental code</h3>
 <ul><li>git add .</li></ul>
@@ -34,4 +35,8 @@
 <ul><li>git push</li></ul>
 </div>
 
+<Div>
+    <h3>Khizir khay everyday one single dim </h3>
+    <img src="imege/499680411_1771639417081303_3253408473958003074_n.jpg" alt="">
+</Div>
 </html>
